--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
   </ol>
   
   <script src="./main.js"></script>
-  <script src="http://at.alicdn.com/t/font_478967_6n4o5i5mnff4unmi.js"></script>
+  <script src="//at.alicdn.com/t/font_478967_6n4o5i5mnff4unmi.js"></script>
   
 </html>
