--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>我的画板</title>
-  <canvas id="canvas" width=300 height=300></canvas>
+  <canvas disable-scroll="true" bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd" id="canvas" width=300 height=300></canvas>
   <div id=actions class="actions">
     <svg id=pen class="active icon">
       <use xlink:href="#icon-pen"></use>
