--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <li id="thick" class="thick"></li>
   </ol>
   
-  <script src="main.js"></script>
+  <script type="text/javascript" src="./main.js"></script>
   <script src="https://at.alicdn.com/t/font_478967_6n4o5i5mnff4unmi.js"></script>
   
 </html>
