--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-Hans">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -31,7 +31,7 @@
     <li id="thick" class="thick"></li>
   </ol>
   
-  <script type="text/javascript" src="./main.js"></script>
+  <script  src="./js/main.js"></script>
   <script src="https://at.alicdn.com/t/font_478967_6n4o5i5mnff4unmi.js"></script>
   
 </html>
